# esp-csi-rs-bench-marking-tool

./: .gitignore  README.md  config.json  config.jsonc  config.py  debug.py  main.py  pyproject.toml  serial_port.py  stats.py  utils.py
data_logs/Hernandez/latency/: csi_latency_data_20260617_180247.csv  csi_latency_data_20260617_180450.csv  csi_latency_data_20260617_180555.csv  csi_latency_data_20260617_180723.csv  csi_latency_data_20260617_181020.csv  csi_latency_data_20260617_183419.csv  csi_latency_stats_20260617_180247.csv  csi_latency_stats_20260617_180450.csv  csi_latency_stats_20260617_180555.csv  csi_latency_stats_20260617_180723.csv  csi_latency_stats_20260617_181020.csv  csi_latency_stats_20260617_183419.csv
data_logs/Hernandez/resources/: resources_data_20260617_173834.csv  resources_data_20260617_174408.csv  resources_stats_20260617_173834.csv  resources_stats_20260617_174408.csv  resources_stats_20260617_175455.csv  resources_stats_20260617_180103.csv
data_logs/Hernandez/throughput/: throughput_data_20260617_183419.csv  throughput_data_20260617_183851.csv  throughput_data_20260617_184028.csv  throughput_data_20260617_184217.csv  throughput_data_20260617_184332.csv  (+5 more)
src/: config.py  file_setup.py  firmware.py  latency_worker.py  main.py  parsing.py  queue_config.py  resources_worker.py  serial_port.py  stats.py  system_process.py  utils.py
src/metrics/: base_stats.py  latency_stats.py  resources_stats.py  throughput_stats.py
src/workers/: base_worker.py  latency_worker.py  resources_worker.py  system_process.py  throughput_worker.py
(+76 files in other folders)
